# safe_gpu

./: README.md  gpu-acquisitor.py  pyproject.toml  setup.py
safe_gpu/: __init__.py  safe_gpu.py
